WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
244799
[css-contain] Fix contain-inline-size-replaced.html
https://bugs.webkit.org/show_bug.cgi?id=244799
Summary
[css-contain] Fix contain-inline-size-replaced.html
Rob Buis
Reported
2022-09-05 03:23:12 PDT
Fix contain-inline-size-replaced.html.
Attachments
Patch
(9.03 KB, patch)
2022-09-05 03:25 PDT
,
Rob Buis
no flags
Details
Formatted Diff
Diff
Patch
(10.42 KB, patch)
2022-09-05 12:21 PDT
,
Rob Buis
no flags
Details
Formatted Diff
Diff
Patch
(30.12 KB, patch)
2022-09-06 01:54 PDT
,
Rob Buis
no flags
Details
Formatted Diff
Diff
Patch
(30.30 KB, patch)
2022-09-06 06:27 PDT
,
Rob Buis
no flags
Details
Formatted Diff
Diff
Patch
(30.80 KB, patch)
2022-09-06 13:47 PDT
,
Rob Buis
no flags
Details
Formatted Diff
Diff
Patch
(30.93 KB, patch)
2022-09-07 01:04 PDT
,
Rob Buis
no flags
Details
Formatted Diff
Diff
Patch
(13.08 KB, patch)
2022-09-07 04:46 PDT
,
Rob Buis
no flags
Details
Formatted Diff
Diff
Show Obsolete
(6)
View All
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2022-09-05 03:25:24 PDT
Created
attachment 462140
[details]
Patch
Rob Buis
Comment 2
2022-09-05 12:21:21 PDT
Created
attachment 462147
[details]
Patch
Rob Buis
Comment 3
2022-09-06 01:54:58 PDT
Created
attachment 462160
[details]
Patch
EWS Watchlist
Comment 4
2022-09-06 01:56:34 PDT
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see
https://trac.webkit.org/wiki/WPTExportProcess
Rob Buis
Comment 5
2022-09-06 06:27:01 PDT
Created
attachment 462164
[details]
Patch
Rob Buis
Comment 6
2022-09-06 13:47:24 PDT
Created
attachment 462168
[details]
Patch
Tim Nguyen (:ntim)
Comment 7
2022-09-06 23:26:39 PDT
Comment on
attachment 462168
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=462168&action=review
r=me
> Source/WebCore/rendering/RenderReplaced.cpp:572 > + if (shouldApplyInlineSizeContainment()) > + return { };
You're using `{ }` here and `LayoutUnit()` above, can you be consistent if they're equivalent?
Rob Buis
Comment 8
2022-09-07 01:04:19 PDT
Created
attachment 462176
[details]
Patch
Rob Buis
Comment 9
2022-09-07 04:46:15 PDT
Created
attachment 462178
[details]
Patch
EWS
Comment 10
2022-09-07 06:13:01 PDT
Committed
254226@main
(113089411a3a): <
https://commits.webkit.org/254226@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 462178
[details]
.
Radar WebKit Bug Importer
Comment 11
2022-09-07 06:14:21 PDT
<
rdar://problem/99646848
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug