Fix contain-inline-size-replaced.html https://bugs.webkit.org/show_bug.cgi?id=244799

Reviewed by Tim Nguyen.

Implement contain: inline-size for replaced elements. At the moment audio elements use
fixed widths in the browser style sheet, so the remaining two failures can't be fixed for now.

* LayoutTests/imported/w3c/web-platform-tests/css/css-contain/contain-inline-size-replaced-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-contain/contain-inline-size-replaced.html:
* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::intrinsicLogicalWidth const):
* Source/WebCore/rendering/RenderBox.h:
(WebCore::RenderBox::intrinsicLogicalWidth const): Deleted.
* Source/WebCore/rendering/RenderReplaced.cpp:
(WebCore::RenderReplaced::computeReplacedLogicalWidth const):

Canonical link: https://commits.webkit.org/254226@main